--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <audio class="hihat-audio" src="\audio\cymbals\FTDK Hat 10.wav"></audio>
 
 <!--   step-sequencer controls -->
-      <div id="step-sequencer-body" class="container">
+      <div id="step-sequencer-body" >
         <div id="step-sequencer-top" class="row">
              <div class="BPM-display"> 
               <p class="p-BPM">90 BPM</p>
