--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
              <div class="step-sequencer-row">
               <div class="controls">
                   <h2 class="h2">Kick</h2>  
-                    <button data-track="0" class="mute-button kick">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1718917/mute-2.svg" alt="" class="img-mute 1">
-                    </button>
+                    <button data-track="0" class="mute-button kick"></button>
                     <div class="form-block">
                           <select name="kick" id="change">
                             <option value=".\audio\kick\Kick Boom-Bap.wav">Boom-Bap </option>
@@ -121,8 +119,8 @@
              <div class="step-sequencer-row">
               <div class="controls">
                   <h2 class="h2">Snare</h2>  
-                    <button data-track="0" class="mute-button snare">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1718917/mute-2.svg" alt="" class="img-mute 1">
+                    <button data-track="1" class="mute-button snare">
+                      
                     </button>
                     <div class="form-block">
                           <select name="snare" id="change">
@@ -193,8 +191,8 @@
              <div class="step-sequencer-row">
               <div class="controls">
                   <h2 class="h2">Hihat</h2>  
-                    <button data-track="0" class="mute-button hihat">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1718917/mute-2.svg" alt="" class="img-mute 1">
+                    <button data-track="2" class="mute-button hihat">
+
                     </button>
                     <div class="form-block">
                           <select name="hihat" id="change">
@@ -266,8 +264,8 @@
              <div class="step-sequencer-row">
               <div class="controls">
                   <h2 class="h2">loop</h2>  
-                    <button data-track="0" class="mute-button kick">
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1718917/mute-2.svg" alt="" class="img-mute 1">
+                    <button data-track="3" class="mute-button kick">
+
                     </button>
                     <div class="form-block">
                           <select name="loop" id="change">
